--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 
   <!-- Firebase SDK -->
   <script>
-    // Firebase configuration
+    // Firebase configuration (project: flowerssubscriptionservice)
     const firebaseConfig = {
-      apiKey: "AIzaSyCf6pp9cLr1MBW2PPF7p4cY7pa9aFG-q1o",
-      authDomain: "flower-subscription-7c9aa.firebaseapp.com",
-      projectId: "flower-subscription-7c9aa",
-      storageBucket: "flower-subscription-7c9aa.firebasestorage.app",
-      messagingSenderId: "622147275176",
-      appId: "1:622147275176:web:9bcfa2ba8a3835883af59d",
-      measurementId: "G-KZJWRLGR0R"
+      apiKey: "AIzaSyB6tfpyYPiv3xfmg72cJ4LzHtABlD-YjL4",
+      authDomain: "flowerssubscriptionservice.firebaseapp.com",
+      projectId: "flowerssubscriptionservice",
+      storageBucket: "flowerssubscriptionservice.firebasestorage.app",
+      messagingSenderId: "262991343026"
     };
 
     // Set Firebase defaults to prevent init.json request
